:recycle: refactor : 즐겨찾기 추가, 랭킹 등 기타